--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="about-image">
 
 
-                    <img src="https://via.placeholder.com/300x400" alt="Sachin Khadka">
+                    <img src="https://github.com/Sachinbahadurkhadka/10/blob/SachinWorkSpace/images/Untitled%20design.png" alt="Sachin Khadka">
                 </div>
             </div>
         </div>
